--- a/app/src/main/res/layout/frag2_layout.xml
+++ b/app/src/main/res/layout/frag2_layout.xml
@@ -54,6 +54,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:background="@drawable/ic_send_btn"
+        android:onClick="send"
         />
 
 </RelativeLayout>
