--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,7 +24,7 @@
         <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/usermane"
+            android:id="@+id/username"
             android:layout_marginTop="10dp"
             app:met_floatingLabel="normal"
             android:hint="Username"/>
