--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/background_message_right"
             android:text="hi"
-            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:padding="8dp"
             android:textSize="18dp"
             android:layout_alignParentEnd="true"
