--- a/app/src/main/res/drawable/background_message_right.xml
+++ b/app/src/main/res/drawable/background_message_right.xml
@@ -4,7 +4,7 @@
 
     <corners
         android:radius="10dp"
-        android:topLeftRadius="3dp"/>
+        android:topRightRadius="3dp"/>
 
     <solid android:color="@color/colorAccent"/>
 
