--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentRight="true">
 
         <TextView
-            android:id="@+id/right_chat"
+            android:id="@+id/show_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/background_message_right"
