--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -30,14 +30,16 @@
     </ScrollView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:id="@+id/recycler_view"
+       android:layout_above="@id/bottom"/>
 
     <EditText
         android:id="@+id/text_send"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:layout_alignParentBottom="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="-4dp"
@@ -53,8 +55,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/ic_send_btn"
-        android:onClick="send"/>
+        android:background="@drawable/ic_send_btn" />
 
     <TextView
         android:id="@+id/username"
