--- a/app/src/main/res/menu/settingsmenu.xml
+++ b/app/src/main/res/menu/settingsmenu.xml
@@ -6,4 +6,10 @@
         android:id="@+id/SettingsButton"
         android:title="@string/settings"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/logout"
+        android:title="Log out"
+        app:showAsAction="collapseActionView"
+        />
 </menu>
