--- a/app/src/main/res/layout/frag2_layout.xml
+++ b/app/src/main/res/layout/frag2_layout.xml
@@ -6,4 +6,10 @@
     android:background="#FAFAFA"
     tools:context=".ui.main.ChatFragment">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hello"
+        android:gravity="center"/>
+
 </RelativeLayout>
