--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -10,12 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recycler_view"
-        android:layout_above="@id/bottom"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/username"/>
+        android:layout_above="@id/bottom">
+    </androidx.recyclerview.widget.RecyclerView>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -23,7 +19,13 @@
         android:padding="5dp"
         android:background="#fff"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:id="@+id/bottom">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
         
         <EditText
             android:layout_width="match_parent"
@@ -32,7 +34,7 @@
             android:background="@android:color/transparent"
             android:hint="Type a message"
             android:layout_toLeftOf="@id/btn_send"
-            android:layout_centerVertical="true"/>
+            android:layout_weight="1"/>
         
         <ImageButton
             android:layout_width="40dp"
@@ -42,6 +44,6 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
-
+        </LinearLayout>
     </RelativeLayout>
 </RelativeLayout>
