--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -13,4 +13,11 @@
         android:layout_weight="1"
         android:text="Log Out"
         android:onClick="logout"/>
+
+    <Button
+        android:id="@+id/groupchat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Group Chat"/>
 </LinearLayout>
