--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -5,14 +5,20 @@
     android:padding="8dp"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/show_message_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:padding="8dp"
-        android:textSize="18dp"
-        android:textColor="#fff"
-        android:background="@drawable/background_message_left" />
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/show_message_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text=""
+            android:padding="8dp"
+            android:textSize="18dp"
+            android:textColor="#fff"
+            android:background="@drawable/background_message_left" />
+
+    </RelativeLayout>
 </RelativeLayout>
