--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -10,6 +10,7 @@
         android:layout_alignParentEnd="true"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:padding="8dp"
         android:id="@+id/llMessage">
 
         <TextView
@@ -18,10 +19,12 @@
             android:layout_height="wrap_content"
             android:background="@drawable/background_message_right"
             android:layout_marginRight="5dp"
+            android:text=""
             android:padding="8dp"
             android:textSize="18dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true" />
+            android:layout_alignParentRight="true"
+            android:gravity="right"/>
 
     </RelativeLayout>
 </RelativeLayout>
