--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="#c6c6c6"
-    tools:context=".ui.main.MessageActivity">
+    tools:context="com.example.pupezaur.ui.main.MessageActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
