--- a/app/src/main/res/values/settings_logo_background.xml
+++ b/app/src/main/res/values/settings_logo_background.xml
@@ -1,4 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="settings_logo_background">#E91E63</color>
-</resources>
+<resources></resources>
