--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -3,14 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#c6c6c6"
-    tools:context="com.example.pupezaur.ui.main.MessageActivity">
+    tools:context="com.example.pupezaur.Fragment.ChatFragment"
+    app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+    android:id="@+id/message_activity"
+    app:layout_collapseMode="pin">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recycler_view"
-        android:layout_above="@id/bottom">
+        android:layout_above="@id/bottom"
+        android:overScrollMode="always">
     </androidx.recyclerview.widget.RecyclerView>
 
     <RelativeLayout
@@ -25,17 +30,18 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        
+            android:orientation="horizontal"
+            android:id="@+id/lm">
+
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/text_send"
             android:background="@android:color/transparent"
             android:hint="Type a message"
             android:layout_toLeftOf="@id/btn_send"
-            android:layout_weight="1"/>
-        
+            android:layout_weight="1" />
+
         <ImageButton
             android:layout_width="40dp"
             android:layout_height="40dp"
