--- a/app/src/main/res/menu/settingsmenu.xml
+++ b/app/src/main/res/menu/settingsmenu.xml
@@ -3,8 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
-        android:id="@+id/SettingsButton"
-        android:title="@string/settings"
-        app:showAsAction="always" />
+        android:id="@+id/ChatButton"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_chat_btn"
+        android:title="Chat" />
+
+    <item
+        android:title="Settings"
+        app:showAsAction="collapseActionView"
+        android:id="@+id/btn_settings"/>
+
+    <item
+        android:title="Log Out"
+        app:showAsAction="collapseActionView"
+        android:id="@+id/btn_logout"/>
 
 </menu>
