--- a/app/src/main/res/drawable/background_message_left.xml
+++ b/app/src/main/res/drawable/background_message_left.xml
@@ -6,6 +6,6 @@
         android:radius="10dp"
         android:topLeftRadius="3dp"/>
 
-    <solid android:color="@color/colorGrey"/>
+    <solid android:color="#E91E63"/>
 
 </shape>
