--- a/app/src/main/res/drawable/background_message_right.xml
+++ b/app/src/main/res/drawable/background_message_right.xml
@@ -6,6 +6,6 @@
         android:radius="10dp"
         android:topRightRadius="3dp"/>
 
-    <solid android:color="@color/colorAccent"/>
+    <solid android:color="#FFF"/>
 
 </shape>
