--- a/app/src/main/res/drawable-anydpi/ic_send_btn.xml
+++ b/app/src/main/res/drawable-anydpi/ic_send_btn.xml
@@ -3,8 +3,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#E91E63"
-    android:alpha="0.8">
+    android:tint="#FFE484A5"
+    android:alpha="1">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
