--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.pupezaur.MainActivities.RegisterActivity">
+    tools:context="com.example.pupezaur.MainActivities.RegisterActivity"
+    android:theme="@style/AppTheme">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,9 +53,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="#E91E63"
+            android:background="@color/BasePink"
             android:text="Log In"
             android:textColor="#ffffff" />
 
+        <Button
+            android:id="@+id/btn_register1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/BasePink"
+            android:text="Register"
+            android:textColor="#ffffff" />
     </LinearLayout>
 </RelativeLayout>
