--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#E91E63</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="pinkish">#E91E63</color>
+    <color name="turqoise">#03DAC5</color>
     <color name="colorGrey">#787878</color>
+    <color name="BasePink">#FFE484A5</color>
 </resources>
