--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#c6c6c6"
-    tools:context="com.example.pupezaur.Fragment.ChatFragment"
+    tools:context="com.example.pupezaur.Fragments.ChatFragment"
     app:layout_constraintBottom_toBottomOf="@+id/toolbar"
     android:id="@+id/message_activity"
     app:layout_collapseMode="pin">
