--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -21,5 +21,12 @@
             android:textColor="#fff"
             android:background="@drawable/background_message_left" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/show_message"
+            android:id="@+id/time_box"
+            android:layout_alignParentLeft="true"/>
+
     </RelativeLayout>
 </RelativeLayout>
