--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -26,6 +26,13 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:gravity="right"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/show_message"
+            android:id="@+id/time_box"
+            android:layout_alignParentRight="true"
+            android:gravity="right" />
 
     </RelativeLayout>
 </RelativeLayout>
