--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    app:theme="@style/CustomToolbar"
+    android:theme="@android:style/Animation.Activity"
+    style="@style/CustomActivityAnimation"
     tools:context=".MainActivities.MainActivity">
-
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -24,5 +24,27 @@
         android:layout_height="295dp"
         android:layout_alignParentBottom="true"
         android:text="" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="15dp"
+        android:elevation="10dp"
+        app:backgroundTint="@color/BasePink"
+        android:src="@drawable/ic_button_add"
+        android:id="@+id/btn_add"/>
+
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textSize="20dp"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/dropdown_weekdays"
+        android:spinnerMode="dropdown"
+        android:textAlignment="center"
+        android:gravity="center_horizontal" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
