--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -20,7 +20,7 @@
             android:background="@drawable/background_message_right"
             android:layout_marginRight="5dp"
             android:text=""
-            android:textColor="#000000"
+            android:textColor="#000"
             android:padding="8dp"
             android:textSize="18dp"
             android:layout_alignParentEnd="true"
@@ -34,6 +34,7 @@
             android:layout_alignParentRight="true"
             android:gravity="right"
             android:layout_marginRight="5dp"
+            android:visibility="gone"
             />
 
     </RelativeLayout>
