--- a/app/src/main/res/layout/phone_register.xml
+++ b/app/src/main/res/layout/phone_register.xml
@@ -43,20 +43,11 @@
         <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/password"
+            android:id="@+id/admin_phone_number"
             android:inputType="textPassword"
             android:layout_marginTop="10dp"
             app:met_floatingLabel="normal"
-            android:hint="Password"/>
-
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/password1"
-            android:inputType="numberPassword"
-            android:layout_marginTop="10dp"
-            app:met_floatingLabel="normal"
-            android:hint="Number Password"/>
+            android:hint="Admin Phone Number"/>
 
         <Button
             android:layout_width="match_parent"
