--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -14,6 +14,18 @@
         android:id="@+id/llMessage">
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_you"
+            android:gravity="right"
+            android:layout_marginRight="5dp"
+            android:textColor="@color/BasePink"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"/>
+
+        <TextView
             android:id="@+id/show_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,6 +37,7 @@
             android:textSize="18dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
+            android:layout_below="@id/txt_you"
             android:gravity="right"/>
         <TextView
             android:layout_width="wrap_content"
