--- a/app/src/main/res/layout/phone_signin.xml
+++ b/app/src/main/res/layout/phone_signin.xml
@@ -26,20 +26,11 @@
         <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/email"
+            android:id="@+id/phone_number"
             android:inputType="phone"
             android:layout_marginTop="10dp"
             app:met_floatingLabel="normal"
             android:hint="Phone Number"/>
-
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/password"
-            android:inputType="textPassword"
-            android:layout_marginTop="10dp"
-            app:met_floatingLabel="normal"
-            android:hint="Password"/>
 
         <Button
             android:id="@+id/btn_signin"
