--- a/app/src/main/res/layout/user_phone_register.xml
+++ b/app/src/main/res/layout/user_phone_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.pupezaur.PhoneConnection.PhoneRegister">
+    tools:context="com.example.pupezaur.PhoneConnection.UserPhoneRegister">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,7 +49,7 @@
             android:layout_marginTop="10dp"
             app:met_floatingLabel="normal"
             android:hint="Admin Phone Number"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
         <Button
             android:layout_width="match_parent"
