--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,48 +33,49 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/main_frame"
-        android:layout_below="@id/dropdown_weekdays"/>
+        android:layout_below="@id/dropdown_weekdays">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="15dp"
-        android:layout_marginTop="70dp">
-
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/timetime_layout">
+            android:layout_height="match_parent"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/start_timer"
-                android:layout_toLeftOf="@id/end_timer"
-                android:layout_weight="4"
-                android:textSize="20dp"
-                android:text=""
-                android:gravity="end" />
+    </FrameLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/end_timer"
-                android:layout_toRightOf="@id/start_timer"
-                android:textSize="20dp"
-                android:text=""
-                android:layout_weight="4"
-                android:gravity="fill_horizontal"/>
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="vertical"-->
+<!--        android:padding="15dp"-->
+<!--        android:layout_marginTop="70dp">-->
 
-        </LinearLayout>
-    </LinearLayout>
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:id="@+id/timetime_layout">-->
+
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:id="@+id/start_timer"-->
+<!--                android:layout_toLeftOf="@id/end_timer"-->
+<!--                android:layout_weight="4"-->
+<!--                android:textSize="20dp"-->
+<!--                android:text=""-->
+<!--                android:gravity="end" />-->
+
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:id="@+id/end_timer"-->
+<!--                android:layout_toRightOf="@id/start_timer"-->
+<!--                android:textSize="20dp"-->
+<!--                android:text=""-->
+<!--                android:layout_weight="4"-->
+<!--                android:gravity="fill_horizontal"/>-->
+
+<!--        </LinearLayout>-->
+<!--    </LinearLayout>-->
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
