--- a/app/src/main/res/layout/fragment_monday.xml
+++ b/app/src/main/res/layout/fragment_monday.xml
@@ -1,13 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/mondayRelativeLayout">
 
-   <androidx.recyclerview.widget.RecyclerView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:id="@+id/mondayRecycleView">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/monday_frame">
 
-   </androidx.recyclerview.widget.RecyclerView>
+<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="end|bottom"-->
+<!--            android:layout_margin="15dp"-->
+<!--            android:elevation="10dp"-->
+<!--            app:backgroundTint="@color/BasePink"-->
+<!--            android:src="@drawable/ic_button_add"-->
+<!--            android:id="@+id/btn_add"-->
+<!--            android:tooltipText="Add course"/>-->
+
+    </FrameLayout>
+
 
 </RelativeLayout>
