--- a/app/src/main/res/layout/schedule_item.xml
+++ b/app/src/main/res/layout/schedule_item.xml
@@ -25,7 +25,7 @@
             android:orientation="horizontal"
             android:id="@+id/timetime_layout">
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Start hour"
                 android:layout_weight="1"
@@ -33,7 +33,7 @@
                 android:gravity="center_horizontal"
                 android:onClick="onClick"/>
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="End hour"
                 android:layout_weight="1"
