--- a/app/src/main/res/drawable-anydpi/ic_send_btn.xml
+++ b/app/src/main/res/drawable-anydpi/ic_send_btn.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#FFE484A5"
+    android:tint="@color/BaseTurquoise"
     android:alpha="1">
   <path
       android:fillColor="@android:color/white"
