--- a/app/src/main/res/layout/admin_phone_register.xml
+++ b/app/src/main/res/layout/admin_phone_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.pupezaur.com.example.parentsapp.UserPhoneRegister">
+    tools:context="com.example.pupezaur.PhoneConnection.AdminPhoneRegister">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create new account"
+            android:text="Register / Sign in"
             android:textColor="#000"
             android:textSize="20dp"
             android:textStyle="bold"/>
@@ -44,22 +44,11 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Register"
+            android:text="Submit"
             android:id="@+id/btn_register"
             android:layout_marginTop="10dp"
-            android:background="@color/BasePink"
+            android:background="@color/BaseTurquoise"
             android:textColor="#ffffff"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Already have an account?"
-            android:layout_marginTop="10dp"
-            android:textColor="#000"
-            android:onClick="onClick"
-            android:id="@+id/btnlogin"
-            android:layout_gravity="center"
-            android:paddingLeft="10dp"/>
 
     </LinearLayout>
 
@@ -91,7 +80,7 @@
             android:text="Continue"
             android:id="@+id/btn_continue"
             android:layout_marginTop="10dp"
-            android:background="@color/BasePink"
+            android:background="@color/BaseTurquoise"
             android:textColor="#ffffff"
             android:layout_below="@id/codeText"/>
 
