--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -19,7 +19,7 @@
             android:id="@+id/txt_you"
             android:gravity="right"
             android:layout_marginRight="5dp"
-            android:textColor="@color/BasePink"
+            android:textColor="@color/BaseTurquoise"
             android:textSize="15dp"
             android:textStyle="bold"
             android:layout_alignParentEnd="true"
