--- a/app/src/main/res/layout/schedule_item.xml
+++ b/app/src/main/res/layout/schedule_item.xml
@@ -4,19 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:padding="30dp"
-        android:visibility="invisible"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/layoutToAdd"
-        android:layout_below="@id/spinner"
         android:visibility="visible">
 
         <LinearLayout
@@ -27,18 +19,18 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Start hour"
+                android:text="Start hour -"
                 android:layout_weight="1"
-                android:textAlignment="center"
-                android:gravity="center_horizontal"
+                android:gravity="right"
+                android:textColor="@color/Black"
                 android:onClick="onClick"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="End hour"
+                android:text="- End hour"
                 android:layout_weight="1"
-                android:textAlignment="center"
-                android:gravity="center_horizontal" />
+                android:textColor="@color/Black"
+                android:gravity="left" />
         </LinearLayout>
 
         <LinearLayout
@@ -53,19 +45,22 @@
                 android:id="@+id/start_timer"
                 android:layout_weight="1"
                 android:textSize="20dp"
-                android:gravity="center_horizontal"
-                android:textAlignment="center"/>
+                android:gravity="right"/>
 
             <TextView
                 android:id="@+id/end_timer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:textAlignment="center"
+                android:gravity="left"
                 android:textSize="20dp" />
 
         </LinearLayout>
+
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/txt_addName"/>-->
     </LinearLayout>
 
 
